--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        <%= title %>
+    </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+</head>
+
+<body>
+    <h1>
+        <%= title %>
+    </h1>
     <p>Welcome to <%= title %></p>
-  </body>
+</body>
+
 </html>
