--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             <div class="col-sm-5">
                 <h2>Humidity:</h2>
                 <div class="readout hum">
-                    <%= humidity %>
+                    <%= humidity %>%
                 </div>
             </div>
             <div class="col-sm-1"></div>
