--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,11 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <p class="small">Data timestamp: <%= date %></p>
+                <div class="paddingTop text-center">
+                    <p class="text-small">
+                        Data timestamp: <%= date %>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
