--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,6 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">    
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script>
-        console.log(<%= graphData %>);
-    </script>
 </head>
 
 <body>
@@ -50,6 +47,13 @@
                     <p class="text-small">
                         Data timestamp: <%= date %>
                     </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="paddingTop">
+                    <p><%= rData %></p>
                 </div>
             </div>
         </div>
