--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="paddingTop">
-                    <p><%= rData %></p>
+                    <p><%= graphData %></p>
                 </div>
             </div>
         </div>
