--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">    
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -52,5 +53,7 @@
         </div>
     </div>
 </body>
+
+<script src="/scripts/index-chart.js"></script>
 
 </html>
