--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <canvas id="chartFortyEight"></canvas>
+                <canvas id="chartFortyEight" width="500" height="400"></canvas>
             </div>
         </div>
     </div>
