--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,12 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <canvas id="chartFortyEight" width="500" height="400"></canvas>
+                <div id="chartContainer">
+                    <canvas id="chartFortyEight" width="500" height="400"></canvas>
+                </div>
+                <div id="smallScreenMsg" class="alert alert-warning">
+                    (!) Chart will not display on small screens.
+                </div>
             </div>
         </div>
     </div>
