--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div class="paddingTop text-center">
+                <div class="paddingTopBottom text-center">
                     <p class="text-small">
                         Data timestamp: <%= date %>
                     </p>
@@ -57,8 +57,11 @@
                 <div id="chartContainer">
                     <canvas id="chartFortyEight" width="500" height="400"></canvas>
                 </div>
-                <div id="smallScreenMsg" class="alert alert-warning">
-                    (!) Chart will not display on small screens.
+                <div id="smallScreenMsg">
+                    <div class="paddingTopBottom">&nbsp;</div>
+                    <div class="alert alert-warning">
+                        (!) No chart display on small screens.
+                    </div>
                 </div>
             </div>
         </div>
