prep for multi-unit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="paddingTopBottom text-center">
+                    <!-- display unit location -->
                     <p class="text-small">
                         Data timestamp: <%= date %>
                     </p>
