pass location to page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,6 +50,7 @@
                     <p class="text-small">
                         Data timestamp: <%= date %>
                     </p>
+                    <p>Location: <%= location %></p>
                 </div>
             </div>
         </div>
