fetch data only once; reduce small screen padding

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,10 @@ body {
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 767px) {
+  body {
+    padding: 25px 15px;
+  }
+
   #chartContainer {
     display: none;
   }
